custom elements changes

--- a/src/button.css
+++ b/src/button.css
@@ -4,6 +4,8 @@
     outline: none;
     border: none;
     padding: 5px 10px;
+    max-height: 30px;
+    max-width: 70px;
 }
 
 .btn-success:hover{
