--- a/src/textbox.css
+++ b/src/textbox.css
@@ -1,54 +1,56 @@
 bsdk-textbox {
   all: unset;
   display: block;
-  background-color: transparent;
+  background-color: transparent
 }
 
-.input-field div {
+.input-field  {
   display: flex;
   justify-content: center;
   margin: 20px auto;
-  padding: 0px;
+  padding: 0;
   position: relative;
   width: 100%;
   min-height: 40px;
-  max-width: 300px; 
-  background: inherit ;
+  max-height: max-content;
+  max-width: max-content;
+  min-width: min-content;
+  background: inherit
 }
 
-.input-field input{
-  outline: none !important;
-  box-shadow: none !important;
+.input-field input {
+  outline: none!important;
+  box-shadow: none!important;
   background: transparent;
   border: 1px solid #6c6c6c;
   border-radius: 5px;
-  transition: all 0.3s ease-in-out;
+  transition: all .3s ease-in-out
 }
+
 .input-field label {
   position: absolute;
   top: 45%;
-  pointer-events: none;
   left: 15px;
   transform: translateY(-50%);
   font-size: 16px;
   color: #6c6c6c;
   pointer-events: none;
-  transition: 0.3s;
-  background:transparent;
+  transition: .3s;
+  background: transparent
 }
 
 .input-field input:focus {
-  border: 2px solid #000000 !important;
-  border-color: #000000 !important; 
-  box-shadow: 0px 0px 5px rgba(75, 75, 75, 0.5) !important;
+  border: 1px solid #242424!important;
+  border-color: #242424!important;
+  box-shadow: 0 0 5px #4b4b4b80!important
 }
-.input-field input:focus ~ label,.input-field input:not(:placeholder-shown) ~ label
- {
-  top: 0px;
+
+.input-field input:focus~label,.input-field input:not(:placeholder-shown)~label {
+  top: 0;
   left: 10px;
   font-size: 14px;
-  padding: 0 2px;
-  background: inherit;
+  padding:  3px 5px;
+  background: #242424;
+  border-radius: 5px;
+  color:#e9e9e9
 }
-
-
